--- a/trunk/bpel2owfn/tests/cover.sh.in
+++ b/trunk/bpel2owfn/tests/cover.sh.in
@@ -1,46 +1,76 @@
-#!/usr/bin/env bash
+#!/bin/sh
 # @configure_input@
 
-#############################################################################
-# This script has two modes:
-#
-#  - if the environment variable COVER is set to TRUE, LCOV from the Linux
+#============================================================================#
+# AUTOTEST WRAPPER SCRIPT FOR MAIN BINARY                                    #
+# written by Niels Lohmann <niels.lohmann@uni-rostock.de>                    #
+#============================================================================#
+
+# This script has three modes:
+# 1. if the environment variable COVER is set to LCOV, LCOV from the Linux
 #    Test project (http://ltp.sourceforge.net/coverage/lcov.php) is used to
 #    collect test case coverage results for the given executable
 #
-#  - otherwise, the given executable is called without LCOV
-#############################################################################
+# 2. if the environment variable COVER is set to ZCOV, zcov is used to
+#    collect test case coverage results for the given executable; see
+#    http://minormatter.com/zcov/ for more information
+#
+# 3. otherwise, the given executable is called without code coverage tool
+
 
 # evaluate COVER variable
-if test "$COVER" != "TRUE"; then
-	$*
-	exit $?
-fi
+case $COVER in
+  "LCOV")
+    # LCOV should always be quiet
+    LCOV="@abs_builddir@/lcov/lcov --quiet"
 
-#############################################################################
+    # derive test name from current directory (assuming GNU Autotest); the
+    # info filename is suffixed with a random number to allow for multiple
+    # invokations of this script for the same test
+    dir=`pwd`
+    TESTNAME=`basename $dir`
+    INFOFILE=@abs_builddir@/cover/$TESTNAME-$RANDOM.info
 
-# LCOV should always be quiet
-LCOV="@abs_builddir@/lcov/lcov --quiet"
+    # reset counters for LCOV
+    $LCOV --zerocounters -directory @abs_top_builddir@
 
-# derive test name from current directory (assuming GNU Autotest); the
-# info filename is suffixed with a random number to allow for multiple
-# invokations of this script for the same test
-dir=`pwd`
-TESTNAME=`basename $dir`
-INFOFILE=@abs_builddir@/cover/$TESTNAME-$RANDOM.info
+    # execute executable and remember exit code
+    $*
+    result=$?
 
-# reset counters for LCOV
-$LCOV --zerocounters -directory @abs_top_builddir@
+    # evaluate coverage result of LCOV
+    $LCOV --capture --directory @abs_top_builddir@ --output-file $INFOFILE --test-name $TESTNAME >/dev/null 2>&1
 
-# execute executable and remember exit code
-$*
-result=$?
+    # remove profile information on C++ sources and headers
+    $LCOV --extract $INFOFILE "@abs_top_builddir@/*" -o $INFOFILE
 
-# evaluate coverage result of LCOV
-$LCOV --capture --directory @abs_top_builddir@ --output-file $INFOFILE --test-name $TESTNAME
+    # exit with executable's exit code
+    exit $result  
+  ;;
 
-# remove profile information on C++ sources and headers
-$LCOV --extract $INFOFILE "@abs_top_builddir@/*" -o $INFOFILE
+  "ZCOV")
+    # set ZCOV variable
+    ZCOV="@abs_builddir@/zcov/zcov-scan"
 
-# exit with executable's exit code
-exit $result
+    # derive test name from current directory (assuming GNU Autotest); the
+    # info filename is suffixed with a random number to allow for multiple
+    # invokations of this script for the same test
+    dir=`pwd`
+    TESTNAME=`basename $dir`
+
+    # execute executable and remember exit code
+    $*
+    result=$?
+
+    # scan directory
+    $ZCOV @abs_builddir@/cover/$TESTNAME.zcov @abs_top_builddir@ &> /dev/null
+
+    # exit with executable's exit code
+    exit $result  
+  ;;
+
+  *)
+    $*
+    exit $?
+  ;;
+esac
